--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   <meta name="description"
     content="Dilnawaz Anwar | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
   <meta name="keywords"
-    content="Dilnawaz Anwar,Dilnawaz Anwar portfolio,Dilnawaz Anwar Portfolio,Dilnawaz Anwar,vinod jangid site,Vinod Jangid Site,vinod jangid me,vinod jangid web,vinod jangid github,vinodjangid site,vinodjangid uiverse,uiverse,vinod jangid uiverse,vinod jangid frontend developer,frontend developer,vinod jangid jaipur,vinod jaipur" />
+    content="Dilnawaz Anwar,Dilnawaz Anwar portfolio,Dilnawaz Anwar Portfolio,Dilnawaz Anwar," />
   <meta name="author" content="Dilnawaz Anwar" />
-  <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
+  <meta property="og:image" content="https://dilnawazanwar.github.io/DilnawazAnwargithub.io/src/png/Pre.png" />
   <meta property="og:title" content="Dilnawaz Anwar | Portfolio" />
   <meta property="og:description"
     content="Hi! My name is Dilnawaz. I'm a Data Analyst. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
 
-  <meta property="og:url" content="https://DilnawazAnwar.site" />
+  <meta property="og:url" content="https://dilnawazanwar.github.io/DilnawazAnwargithub.io/" />
   <meta property="og:site_name" content="Dilnawaz Anwar Portfolio" />
 
-  <meta name="twitter:image:src" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
+  <meta name="twitter:image:src" content="https://dilnawazanwar.github.io/DilnawazAnwargithub.io/src/png/Pre.png" />
   <meta name="twitter:site" content="@Portfolio" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Dilnawaz Anwar-Protfolio" />
