--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/clogo.png" alt="c language skill" class="tech-stack-logo" />
-              <span class="tooltip">C</span>
+              <img src="./src/png/database.png" alt="c language skill" class="tech-stack-logo" />
+              <span class="tooltip">MYSQL</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
