--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
   <script>
     function openURL() {
-      var url = "src/pdf/Dilnawaz Anwar.pdf";
+      var url = "src/pdf/Vinod Jangid Resune.pdf";
 
       window.open(url, "_blank");
     }
