--- a/index.html
+++ b/index.html
@@ -617,9 +617,9 @@
 
   <script>
     function openURL() {
-      var url = "src/pdf/DilnawazResume.pdf";
+      var url = "/src/pdf/DilnawazResume.pdf";
 
-      window.open(url, "_blank");
+      window.open(url,"_blank");
     }
   </script>
 
