--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
   <script>
     function openURL() {
-      var url = "src/pdf/DilnawazResume.pdf";
+      var url = "src/svg/DilnawazResume.pdf";
 
       window.open(url,"_blank");
     }
