--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                 <article class="ProjectHeading">Hospitallity Analysis</article>
                 <p class="ProjectDescription">
                   This Power BI project provided valuable insights into the hospitality business’s
-                   operations and customer base over three months. The analysis facilitated better decision-making, enhanced customer satisfaction,
+                   operations and customer base over three months.<br> The analysis facilitated better <br>decision-making, enhanced customer satisfaction,
                    and improved operational efficiency.
                 </p>
                 <div class="project-buttons">
